<resources>
    <string name="app_name">Common Utils Demo</string>

    <!--as is-->
    <string name="show_keyboard">Show Keyboard</string>
    <string name="hide_keyboard">Hide Keyboard</string>
    <string name="example_edit_text_hint">Type anything…</string>
    <string name="add_item">Create Item</string>
    <string name="remove_item">Remove Item</string>
    <string name="add_section">Create Section</string>
    <string name="remove_section">Remove Section</string>
    <string name="action">Action</string>
    <string name="reset">Start Over</string>
    <string name="range_from">Select Start Range</string>
    <string name="range_to">Select End Range</string>

    <!--headings-->
    <string name="headline_imm">Input Manager</string>
    <string name="headline_number_extraction">Number Extraction</string>
    <string name="headline_days_interval">Days Interval</string>

    <!--titles-->
    <string name="mode_year_month_day">Year, Month, Day:</string>
    <string name="mode_year_day">Year, Day:</string>
    <string name="mode_month_day">Month, Day:</string>
    <string name="mode_day">Day:</string>
    <string name="mode_hour">Hour:</string>
    <string name="mode_minute">Minute:</string>
    <string name="mode_second">Second:</string>

    <!--messages-->
    <string name="section_full">Available sections are already created.</string>
    <string name="result_number_extraction">Extracted number will be displayed here</string>
    <string name="on_list_item_click">Item clicked</string>
    <string name="result_days_interval">No range selected</string>
    <string name="result_number_conversion">Converted number will be displayed here</string>

    <!--hints-->
    <string name="hint_number_extraction">May or may not contain number</string>

    <!--description-->
    <string name="divider">Divider</string>
    <string name="set">Set</string>
    <string name="headline_word_conversion">Convert to Word</string>
    <string name="hint_number_conversion">Type a number</string>
    <string name="select_read_mode">Select Read Mode</string>
    <string name="read_mode_digit">Read as Digits</string>
    <string name="read_mode_number">Read as Number</string>
    <string name="remove_section_items">Remove all Items</string>
    <string name="info_operation_successful_copy">Copied</string>
</resources>