<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SystemUtilsActivity">

    <TextView
        android:id="@+id/input_manager_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_layout_margin"
        android:layout_marginTop="@dimen/default_view_margin"
        android:layout_alignParentTop="true"
        android:text="@string/headline_imm"
        android:textAppearance="@style/TextAppearance.FluentUI.Headline" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/input_header_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fluentui_divider_height"
        android:layout_marginTop="@dimen/fluentui_content_inset"
        android:layout_below="@id/input_manager_heading"
        android:background="@drawable/ms_row_divider" />

    <Button
        android:id="@+id/show_keyboard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:layout_below="@id/input_header_divider"
        android:layout_marginStart="@dimen/default_layout_margin"
        android:text="@string/show_keyboard" />

    <Button
        android:id="@+id/hide_keyboard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:layout_below="@id/show_keyboard_button"
        android:layout_alignStart="@id/show_keyboard_button"
        android:text="@string/hide_keyboard" />

    <EditText
        android:id="@+id/simple_edit_text"
        style="@style/Widget.AppTheme.EditText"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:layout_marginEnd="@dimen/default_layout_margin"
        android:layout_width="match_parent"
        android:layout_below="@id/hide_keyboard_button"
        android:ems="10"
        android:hint="@string/example_edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:layout_alignStart="@id/show_keyboard_button" />

</RelativeLayout>