<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarUtilsActivity">

    <com.microsoft.fluentui.appbarlayout.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/heading_days_interval"
        style="@style/TextAppearance.FluentUI.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:layout_marginStart="@dimen/default_layout_margin"
        android:layout_marginTop="@dimen/default_view_margin"
        android:layout_marginBottom="@dimen/default_view_margin"
        android:text="@string/headline_days_interval" />

    <ImageView
        android:id="@+id/days_interval_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_days_interval"
        android:layout_marginBottom="@dimen/default_view_margin"
        android:contentDescription="@string/divider"
        android:src="@drawable/ms_row_divider" />

    <LinearLayout
        android:id="@+id/interval_result_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/days_interval_divider"
        android:layout_marginStart="@dimen/default_layout_margin"
        android:layout_marginEnd="@dimen/default_layout_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/similar_components_view_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_interval_y_m_d"
                android:layout_width="@dimen/date_interval_mode_width"
                android:layout_height="wrap_content"
                android:text="@string/mode_year_month_day"
                android:textAppearance="@style/TextAppearance.AppTheme.Result.Label" />

            <TextView
                android:id="@+id/result_interval_y_m_d"
                style="@style/TextAppearance.AppTheme.Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/similar_components_view_margin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/similar_components_view_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_interval_y_d"
                android:layout_width="@dimen/date_interval_mode_width"
                android:layout_height="wrap_content"
                android:text="@string/mode_year_day"
                android:textAppearance="@style/TextAppearance.AppTheme.Result.Label" />

            <TextView
                android:id="@+id/result_interval_y_d"
                style="@style/TextAppearance.AppTheme.Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/similar_components_view_margin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/similar_components_view_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_interval_m_d"
                android:layout_width="@dimen/date_interval_mode_width"
                android:layout_height="wrap_content"
                android:text="@string/mode_month_day"
                android:textAppearance="@style/TextAppearance.AppTheme.Result.Label" />

            <TextView
                android:id="@+id/result_interval_m_d"
                style="@style/TextAppearance.AppTheme.Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/similar_components_view_margin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/similar_components_view_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_interval_day"
                android:layout_width="@dimen/date_interval_mode_width"
                android:layout_height="wrap_content"
                android:text="@string/mode_day"
                android:textAppearance="@style/TextAppearance.AppTheme.Result.Label" />

            <TextView
                android:id="@+id/result_interval_day"
                style="@style/TextAppearance.AppTheme.Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/similar_components_view_margin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/similar_components_view_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_interval_hour"
                android:layout_width="@dimen/date_interval_mode_width"
                android:layout_height="wrap_content"
                android:text="@string/mode_hour"
                android:textAppearance="@style/TextAppearance.AppTheme.Result.Label" />

            <TextView
                android:id="@+id/result_interval_hour"
                style="@style/TextAppearance.AppTheme.Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/similar_components_view_margin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/similar_components_view_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_interval_minute"
                android:layout_width="@dimen/date_interval_mode_width"
                android:layout_height="wrap_content"
                android:text="@string/mode_minute"
                android:textAppearance="@style/TextAppearance.AppTheme.Result.Label" />

            <TextView
                android:id="@+id/result_interval_minute"
                style="@style/TextAppearance.AppTheme.Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/similar_components_view_margin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_view_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_interval_second"
                android:layout_width="@dimen/date_interval_mode_width"
                android:layout_height="wrap_content"
                android:text="@string/mode_second"
                android:textAppearance="@style/TextAppearance.AppTheme.Result.Label" />

            <TextView
                android:id="@+id/result_interval_second"
                style="@style/TextAppearance.AppTheme.Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/similar_components_view_margin" />

        </LinearLayout>

    </LinearLayout>

    <com.microsoft.fluentui.widget.Button
        android:id="@+id/interval_range_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/interval_result_container"
        android:layout_marginStart="@dimen/default_layout_margin"
        android:layout_marginBottom="@dimen/default_view_margin"
        android:text="@string/range_from" />

    <com.microsoft.fluentui.widget.Button
        android:id="@+id/interval_range_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/interval_range_start"
        android:layout_marginStart="@dimen/similar_components_view_margin"
        android:layout_toEndOf="@id/interval_range_start"
        android:text="@string/range_to" />
</RelativeLayout>